--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -96,7 +96,11 @@
          </property>
          <layout class="QGridLayout" name="gridLayout_6">
           <item row="0" column="1" colspan="2">
-           <widget class="QLineEdit" name="pBox"/>
+           <widget class="QLineEdit" name="pBox">
+            <property name="text">
+             <string>0</string>
+            </property>
+           </widget>
           </item>
           <item row="2" column="0">
            <widget class="QLabel" name="iLabel">
@@ -106,7 +110,11 @@
            </widget>
           </item>
           <item row="2" column="1" colspan="2">
-           <widget class="QLineEdit" name="iBox"/>
+           <widget class="QLineEdit" name="iBox">
+            <property name="text">
+             <string>0</string>
+            </property>
+           </widget>
           </item>
           <item row="3" column="0">
            <widget class="QLabel" name="dLabel">
@@ -116,7 +124,11 @@
            </widget>
           </item>
           <item row="3" column="1" colspan="2">
-           <widget class="QLineEdit" name="dBox"/>
+           <widget class="QLineEdit" name="dBox">
+            <property name="text">
+             <string>0</string>
+            </property>
+           </widget>
           </item>
           <item row="4" column="2">
            <widget class="QPushButton" name="pidReset">
@@ -152,7 +164,11 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QLineEdit" name="desiredTransBox"/>
+           <widget class="QLineEdit" name="desiredTransBox">
+            <property name="text">
+             <string>0</string>
+            </property>
+           </widget>
           </item>
           <item row="1" column="0">
            <widget class="QLabel" name="actualTransLabel">
@@ -162,7 +178,11 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QLineEdit" name="actualTransBox"/>
+           <widget class="QLineEdit" name="actualTransBox">
+            <property name="text">
+             <string>0</string>
+            </property>
+           </widget>
           </item>
           <item row="2" column="0">
            <widget class="QLabel" name="desiredLaunchLabel">
@@ -172,7 +192,11 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QLineEdit" name="desiredLaunchBox"/>
+           <widget class="QLineEdit" name="desiredLaunchBox">
+            <property name="text">
+             <string>0</string>
+            </property>
+           </widget>
           </item>
           <item row="3" column="0">
            <widget class="QLabel" name="actualLaunchLabel">
@@ -182,7 +206,11 @@
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QLineEdit" name="actualLaunchBox"/>
+           <widget class="QLineEdit" name="actualLaunchBox">
+            <property name="text">
+             <string>0</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
