--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -230,7 +230,14 @@
          <property name="frameShadow">
           <enum>QFrame::Raised</enum>
          </property>
-         <layout class="QGridLayout" name="gridLayout_7">
+         <layout class="QGridLayout" name="gridLayout_5">
+          <item row="2" column="2">
+           <widget class="QRadioButton" name="autoButton">
+            <property name="text">
+             <string>Auto</string>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="0">
            <widget class="QLabel" name="distLabel">
             <property name="text">
@@ -238,7 +245,7 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
+          <item row="0" column="1" colspan="2">
            <widget class="QLineEdit" name="distanceBox"/>
           </item>
           <item row="1" column="0">
@@ -248,13 +255,20 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item row="1" column="1" colspan="2">
            <widget class="QLineEdit" name="speedBox"/>
           </item>
-          <item row="2" column="1">
+          <item row="2" column="0" colspan="2">
            <widget class="QPushButton" name="pidReset">
             <property name="text">
              <string>Reset</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="2">
+           <widget class="QRadioButton" name="manualButton">
+            <property name="text">
+             <string>Manual</string>
             </property>
            </widget>
           </item>
