--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -231,13 +231,6 @@
           <enum>QFrame::Raised</enum>
          </property>
          <layout class="QGridLayout" name="gridLayout_5">
-          <item row="2" column="2">
-           <widget class="QRadioButton" name="autoButton">
-            <property name="text">
-             <string>Auto</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="0">
            <widget class="QLabel" name="distLabel">
             <property name="text">
@@ -259,16 +252,23 @@
            <widget class="QLineEdit" name="speedBox"/>
           </item>
           <item row="2" column="0" colspan="2">
-           <widget class="QPushButton" name="pidReset">
+           <widget class="QRadioButton" name="autoButton">
             <property name="text">
-             <string>Reset</string>
+             <string>Auto</string>
             </property>
            </widget>
           </item>
-          <item row="3" column="2">
+          <item row="2" column="2">
            <widget class="QRadioButton" name="manualButton">
             <property name="text">
              <string>Manual</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1" colspan="2">
+           <widget class="QPushButton" name="pidReset">
+            <property name="text">
+             <string>Reset</string>
             </property>
            </widget>
           </item>
